// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - constructor Overwrite default DescriptionComponent value 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        object
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      />
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <h1>
           
          Hello, 
          <em>
            world
          </em>
          !
           
        </h1>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - constructor Overwrite default qualifierMessagesOrder value 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        object
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 1 propertie(s)
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;
